# factorygame

./: .gitignore  CMakeLists.txt
code/: edit_phase.cpp  edit_phase.h  game_math.cpp  game_math.h  main.cpp  state.cpp  state.h  types.h
raylib/src/: rmodels.c
